<resources>
    <string name="app_name">FedUniStudentAttendance30395636</string>
    <string name="login_name">Student Attendance</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="password_not_again">Password Not Again</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nick">Nick</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_input">Please input teacher mobile</string>
    <string name="role">Role</string>
    <string name="notNull"> cannot be empty</string>
    <string name="accountNotice">This account already exists. Please modify the account name</string>
    <string name="registerNotice">Register was successful</string>
    <string name="passwordNotice">Password error</string>
    <string name="course">course</string>
    <string name="student">student</string>
    <string name="mine">mine</string>
    <string name="student_mange">Student Management</string>
    <string name="course_mange">Course Management</string>
    <string name="add">Add</string>
    <string name="app_preference_start_week_begin_millis">start_week_begin_date</string>
    <string name="class_schedule">Course</string>
    <string name="class_name">Class</string>
    <string name="student_name">Student</string>
    <string name="student_name_name">Student Name</string>
    <string name="student_number">Student Number</string>
    <string name="confirm_to_delete">Confirm Delete?</string>
    <string name="app_preference_current_cs_name_id">current_sd_name_id</string>
    <string name="app_preference_app_is_first_start">app_is_first_start_v2</string>
    <string name="enter_class">PLease enter class name</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="select_class">Please select the class for class</string>
    <string name="add_class">Add Class</string>
</resources>